Modified to add deps on services

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,9 @@ services:
             - "8081:8081"
         networks:
             - first-backend
-            - first-frontend
+			- first-frontend
+		depends_on:
+			- mariadb_service
         deploy:
             replicas: 2
             restart_policy:
@@ -30,7 +32,10 @@ services:
         ports:
             - "80:80"
         networks:
-            - first-frontend
+			- first-frontend
+		depends_on:
+			- mariadb_service
+			- java_service
         deploy:
             replicas: 2
             restart_policy:
